--- a/project/MainWindow.xaml
+++ b/project/MainWindow.xaml
@@ -11,7 +11,17 @@
         <Label Content="Name:" HorizontalAlignment="Left" Margin="20,19,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <TextBox x:Name="dbName" HorizontalAlignment="Left" Height="23" Margin="130,23,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="20,70,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <TextBox x:Name="dbPassword" HorizontalAlignment="Left" Height="23" Margin="130,74,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <Button x:Name="btnAdd" Content="Register" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Left" Margin="218,115,0,0" VerticalAlignment="Top" Width="75" Click="BtnAdd_Click"/>
+        <PasswordBox x:Name="dbPassword" HorizontalAlignment="Left" Height="23" Margin="130,74,0,0" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Button x:Name="registerstudent" Content="Register" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Left" Margin="218,115,0,0" VerticalAlignment="Top" Width="75" Click="BtnRegister"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="417,19,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="loginName" HorizontalAlignment="Left" Height="23" Margin="522,23,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="417,74,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <PasswordBox x:Name="loginPassword" HorizontalAlignment="Left" Height="23" Margin="522,74,0,0" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Button x:Name="loginstudent" Content="Login" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Left" Margin="611,115,0,0" VerticalAlignment="Top" Width="75" Click="btnLoginAsStudent"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="417,245,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="TeacherName" HorizontalAlignment="Left" Height="23" Margin="522,249,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="417,323,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <PasswordBox x:Name="TeacherPassword" HorizontalAlignment="Left" Height="23" Margin="522,327,0,0" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Button x:Name="loginteacher" Content="Login" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Left" Margin="611,379,0,0" VerticalAlignment="Top" Width="75" Click="btnLoginAsTeacher"/>
     </Grid>
 </Window>
