--- a/project/Lists/StudentsList.xaml
+++ b/project/Lists/StudentsList.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="project.UserLoggedIn"
+﻿<Window x:Class="project.Lists.StudentsList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:project"
+        xmlns:local="clr-namespace:project.Lists"
         mc:Ignorable="d"
-        Title="UserLoggedIn" Height="450" Width="800">
+        Title="StudentsList" Height="450" Width="800">
     <Grid>
-        
+        <DataGrid Name="lista2" />
     </Grid>
 </Window>
