--- a/project/TeacherLoggedIn.xaml
+++ b/project/TeacherLoggedIn.xaml
@@ -17,5 +17,7 @@
         <Label Content="Course Name:" HorizontalAlignment="Left" Margin="432,74,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <TextBox x:Name="whatCourse" HorizontalAlignment="Left" Height="23" Margin="568,78,0,0" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Button x:Name="registerstudenttocourse" Content="Add Course" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Left" Margin="600,117,0,0" VerticalAlignment="Top" Width="98" Click="BtnAddStudentToCourse"/>
+        <Button x:Name="asd" Content="Show All Courses" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Center" Margin="0,281,0,0" VerticalAlignment="Top" Width="196" Click="ShowCurses"/>
+        <Button x:Name="aaa" Content="Show All Students" FontSize="16" FontFamily="Microsoft New Tai Lue" HorizontalAlignment="Center" Margin="0,321,0,0" VerticalAlignment="Top" Width="196" Click="ShowStudents"/>
     </Grid>
 </Window>
