--- a/project/Lists/CoursesList.xaml
+++ b/project/Lists/CoursesList.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="project.cursesList"
+﻿<Window x:Class="project.CourseList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
